# blockid

./: #[cfg(feature = "rococo-native")].rs  .editorconfig  .gitignore  Dockerfile  README.md  blockchain-init.py  blockchain-init.sh  chainspec-generator.py  init-block-id.py  metadata.json  para-2000-genesis-state  para-2000-wasm  plain-chainspec.json  plain-parachain-chainspec.json  raw-chainspec.json  raw-parachain-chainspec.json  recent-events.py  rococo-custom-3-plain.json  rococo-custom-3-raw.json  rococo-custom-4-plain.json  rococo-custom-4-raw.json  rust-toolchain  rustfmt.toml  sudo-para-wrapper.py  sudo-wrapper.py  text.json
Deployment/: deployment.yml  service.yml
docs/: demo.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/credits/: Cargo.toml
pallets/credits/src/: crypto.rs  lib.rs  macros.rs  mock.rs  offchain.rs  tests.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs  nft.rs
pallets/uniques/: Cargo.toml
pallets/uniques/src/: benchmarking.rs  functions.rs  impl_nonfungibles.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  opaque.rs
scripts/: tests.sh
substrate-node-template-polkadot-v0.9.37/runtime/: Cargo.toml
substrate-node-template-polkadot-v0.9.37/runtime/src/: lib.rs
ts-client/: README.md  fetch-metadata.sh  metadata.json  package.json  tsconfig.json  typedoc.json
ts-client/scripts/: buy-card.ts  credits.ts  crs_api.ts  facebook_api.ts  fetch-metadata-parsed.ts  lookup-cards.ts  mint-cards.ts  onchain-summary.ts  onerep.ts  register-credits.ts  sell-card.ts
ts-client/src/: config.ts  externals.ts  index.ts  utils.ts
ts-client/src/api/: connection.ts  credits.ts  index.ts
ts-client/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-rpc.ts  augment-api-tx.ts  lookup.ts  registry.ts  types-lookup.ts
