[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git' }

[dependencies]
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git' }
hex-literal = '0.3'
jsonrpc-core = '18.0'
fresh-credit-primitives = { path = '../primitives' }
fresh-credit-runtime = { path = '../runtime' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git' }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git' }
sc-service = { features = ["wasmtime"], git = 'https://github.com/paritytech/substrate.git' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git' }
sp-api = { git = 'https://github.com/paritytech/substrate.git' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git' }
sp-core = { git = 'https://github.com/paritytech/substrate.git' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git' }
structopt = '0.3'
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git' }
serde_json = "1.0"

[features]
default = []
runtime-benchmarks = ['fresh-credit-runtime/runtime-benchmarks']

[package]
authors = ['Fresh Credit Team']
edition = '2021'
license = 'Apache-2.0'
name = 'fresh-credit-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
