[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0' }
scale-info = { default-features = false, features = ['derive'], version = '1.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-core    = { default-features = false, git = 'https://github.com/paritytech/substrate.git' }
blake2-rfc = { version = "0.2.18", default-features = false }

[features]
default = ['std']
std = [
  'parity-scale-codec/std',
  'scale-info/std',
]

[package]
authors = ['Fresh Credit Team']
edition = '2021'
license = 'Apache-2.0'
name = 'fresh-credit-primitives'
version = '0.1.0'
